ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Invoice_Amount_Override__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Override__c</fullName>
    <inlineHelpText>Used to manually override the generated value in the Invoice Amount field</inlineHelpText>
    <label>Invoice Amount Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>