ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Issued_Not_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_Not_Issued_Date__c</fullName>
    <description>This field is included as part of  CLAIMS-31. This is a formula field to stamp Today’s date when the Warranty Status is completed</description>
    <formula>IF(
				ISPICKVAL(Warranty_Status__c, &apos;Completed&apos;),
			    TODAY(),
			        	NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date when the Warranty Status is completed</inlineHelpText>
    <label>Issued/ Not Issued Date</label>
    <type>Date</type>
</CustomField>