ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/New_Roof__c.field-meta.xml
<CustomField>
    <fullName>New_Roof__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is part of the roofing system information</description>
    <label>New Roof</label>
    <type>Checkbox</type>
</CustomField>