ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>A means for a claims rep to explain why a warranty was not issued to a contractor</description>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>