ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Other_Products__c.field-meta.xml
<CustomField>
    <fullName>Other_Products__c</fullName>
    <description>Other Products Used (eg. primers, bitumen, cants, etc.)</description>
    <label>Other Products</label>
    <type>TextArea</type>
</CustomField>