ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Overlay_Board__c.field-meta.xml
<CustomField>
    <fullName>Overlay_Board__c</fullName>
    <label>Overlay Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1&quot; F. Board- Partial</fullName>
            </value>
            <value>
                <fullName>1&quot; Fibreboard</fullName>
            </value>
            <value>
                <fullName>1&quot; Hunter Iso</fullName>
            </value>
            <value>
                <fullName>1&quot; IBI Fibrebd &amp; 1/2&quot; Std. Ctd.</fullName>
            </value>
            <value>
                <fullName>1&quot; Modular Protec RS</fullName>
            </value>
            <value>
                <fullName>1&quot; Perlite</fullName>
            </value>
            <value>
                <fullName>1&quot; Securipan</fullName>
            </value>
            <value>
                <fullName>1&quot; Std. Coated</fullName>
            </value>
            <value>
                <fullName>1.5&quot; Std. Coated</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Cascades F. Bd.</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Cont. F.Bd</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Dens-Deck &amp; 3mm Protectoboard</fullName>
            </value>
            <value>
                <fullName>1/2&quot; EMCO HD Fibrebd.</fullName>
            </value>
            <value>
                <fullName>1/2&quot; FB  Naturelle</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Fibre de Bois</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Fibreboard</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Gyproc</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Imp. Coated</fullName>
            </value>
            <value>
                <fullName>1/2&quot; J.M. Retrofit Bd.</fullName>
            </value>
            <value>
                <fullName>1/2&quot; JM Duraboard</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Natural F. Bd.</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Nord Fibre H.D.</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Perlite</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Permalite</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Plywood</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Roofcraft FR board</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Secure Rock</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Securipan</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Std. Coated</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Tentest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>