ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Proof_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Proof of purchase provided?</description>
    <inlineHelpText>Proof of purchase provided?</inlineHelpText>
    <label>Proof of Purchase?</label>
    <type>Checkbox</type>
</CustomField>