ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Re_Cover_Limited_Warranty_Application__c.field-meta.xml
<CustomField>
    <fullName>Re_Cover_Limited_Warranty_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A complete Re-cover Limited Warranty Application has been received?</description>
    <inlineHelpText>A complete Re-cover Limited Warranty Application has been received?</inlineHelpText>
    <label>Re-Cover Limited Warranty Application?</label>
    <type>Checkbox</type>
</CustomField>