ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Recover__c.field-meta.xml
<CustomField>
    <fullName>Recover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of the roofing system</description>
    <label>Recover</label>
    <type>Checkbox</type>
</CustomField>