ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Registration_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Registration_Prefix__c</fullName>
    <inlineHelpText>Stores the prefix (e.g. 2-char province code) for the Registraiton Number. Used for aggregation when determining next sequence number</inlineHelpText>
    <label>Registration Prefix</label>
    <length>2</length>
    <type>Text</type>
</CustomField>