ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <referenceTo>Related_Product__c</referenceTo>
    <relationshipLabel>Warranties</relationshipLabel>
    <relationshipName>Warranties</relationshipName>
    <type>Lookup</type>
</CustomField>