ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Roof_Plan__c.field-meta.xml
<CustomField>
    <fullName>Roof_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A complete roof plan of the proposed area provided?</description>
    <inlineHelpText>A complete roof plan of the proposed area provided?</inlineHelpText>
    <label>Roof Plan?</label>
    <type>Checkbox</type>
</CustomField>