ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Roof_Section__c.field-meta.xml
<CustomField>
    <fullName>Roof_Section__c</fullName>
    <description>Used to indicate the section of a roof that a warranty will apply to, e.g. large commercial installations with multiple roof sections</description>
    <inlineHelpText>Used to indicate the section of a roof that a warranty will apply to, e.g. large commercial installations with multiple roof sections</inlineHelpText>
    <label>Roof Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>