ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <inlineHelpText>Sequence number for province of the Contractor; leveraged for the Registration # field</inlineHelpText>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>