ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Slope__c.field-meta.xml
<CustomField>
    <fullName>Slope__c</fullName>
    <label>Slope</label>
    <length>80</length>
    <type>Text</type>
</CustomField>