ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Square_Footage_of_Installation__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage_of_Installation__c</fullName>
    <description>Total square footage of the installation; used to generate the invoice amount</description>
    <label>Square Footage of Installation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>