ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Status_Date_Issued_Not_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Issued_Not_Issued_Date__c</fullName>
    <description>CLAIMS - 31. The date the Warranty status changes to Completed

2019-10-01 Renamed properly by Skot as had been earlier requested in email to Sinan and others.</description>
    <inlineHelpText>Date the Warranty status changes to Completed</inlineHelpText>
    <label>Status Date: Issued/ Not Issued Date</label>
    <type>Date</type>
</CustomField>