ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Tear_Off__c.field-meta.xml
<CustomField>
    <fullName>Tear_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is part of the roofing system</description>
    <label>Tear-Off</label>
    <type>Checkbox</type>
</CustomField>