ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Thermoscan_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Thermoscan_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Thermoscan analysis (provided by a 3rd party consultant)</description>
    <inlineHelpText>Thermoscan analysis (provided by a 3rd party consultant)</inlineHelpText>
    <label>Thermoscan Analysis?</label>
    <type>Checkbox</type>
</CustomField>