ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Transferred__c.field-meta.xml
<CustomField>
    <fullName>Transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the warranty has been transferred from the original owner</description>
    <label>Transferred?</label>
    <type>Checkbox</type>
</CustomField>