ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Two_Year_Inspection_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Two_Year_Inspection_Complete_Date__c</fullName>
    <description>All IKO commercial DiamondShield warranties require a two year inspection. This is the date the Warranty Inspection is due.</description>
    <inlineHelpText>The date the Warranty&apos;s two year inspection was actually performed.</inlineHelpText>
    <label>Two Year Inspection Complete Date</label>
    <type>Date</type>
</CustomField>