ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Two_Year_Inspection_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Two_Year_Inspection_Due_Date__c</fullName>
    <description>The two year inspection date. Should be populated for Diamond Shield warranties only.</description>
    <formula>IF(CONTAINS( TEXT(Type__c) , &apos;Diamond&apos; ),  ADDMONTHS(Warranty_Start_Date__c , 24 ), null)</formula>
    <inlineHelpText>If the Warranty is a Diamond Shield warranty a two year inspection is required.This is the date it&apos;s due on. This date will be blank if the Warranty is not a Diamond Shield warranty.</inlineHelpText>
    <label>Two Year Inspection Due Date</label>
    <type>Date</type>
</CustomField>