ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Warranty</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Labor &amp; Membrane</fullName>
            </value>
            <value>
                <fullName>Diamond Shield</fullName>
            </value>
            <value>
                <fullName>ShieldPRO plus+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>