ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Vapour_Retardant__c.field-meta.xml
<CustomField>
    <fullName>Vapour_Retardant__c</fullName>
    <label>Vapour Retardant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#15 Felt</fullName>
            </value>
            <value>
                <fullName>#25-#15 Perf/2 ply #15 Perf</fullName>
            </value>
            <value>
                <fullName>1 Ply #15 + 2 Plies #15</fullName>
            </value>
            <value>
                <fullName>1 Ply No. 25 Glass &amp; 1 Ply #15</fullName>
            </value>
            <value>
                <fullName>1 Ply Type IV Glass</fullName>
            </value>
            <value>
                <fullName>1/2&quot; Dens-deck</fullName>
            </value>
            <value>
                <fullName>10 mil. Clear Poly</fullName>
            </value>
            <value>
                <fullName>2 + 2 / #15 Felt</fullName>
            </value>
            <value>
                <fullName>2 plies #15 felt &amp; MF-95-SS</fullName>
            </value>
            <value>
                <fullName>2 Plies #15 Perf</fullName>
            </value>
            <value>
                <fullName>2 plies Armourbond 180</fullName>
            </value>
            <value>
                <fullName>2 Plies BUR</fullName>
            </value>
            <value>
                <fullName>2 Plies Kraft</fullName>
            </value>
            <value>
                <fullName>2 Plies Type IV</fullName>
            </value>
            <value>
                <fullName>2 Plis #15</fullName>
            </value>
            <value>
                <fullName>2 Ply #15 &amp; Asphalt</fullName>
            </value>
            <value>
                <fullName>2 Ply #15 + 2 Ply #15</fullName>
            </value>
            <value>
                <fullName>2 ply #15 EMCO felt</fullName>
            </value>
            <value>
                <fullName>2 Ply #15 Felt</fullName>
            </value>
            <value>
                <fullName>2 ply #15 felt &amp; 1 ply nail</fullName>
            </value>
            <value>
                <fullName>2 Ply #15 Felt &amp; Kraft V/R</fullName>
            </value>
            <value>
                <fullName>2.5&quot; &amp; 3.0&quot; IKO Therm</fullName>
            </value>
            <value>
                <fullName>3 plies of #15 felt</fullName>
            </value>
            <value>
                <fullName>3 Ply #15 EMCO felt</fullName>
            </value>
            <value>
                <fullName>4 mil poly</fullName>
            </value>
            <value>
                <fullName>4 Plies #15 Felt</fullName>
            </value>
            <value>
                <fullName>4 ply smooth on gypsum</fullName>
            </value>
            <value>
                <fullName>40/60/40 Kraft</fullName>
            </value>
            <value>
                <fullName>6 mil poly</fullName>
            </value>
            <value>
                <fullName>Abond Flash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>