ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Age__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Age__c</fullName>
    <description>This field has been created for CLAIMS -27. This is a formula field to calculate the number of days since Estimated Start Date</description>
    <formula>NOW() - DATETIMEVALUE(Work_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the Estimated Start Date</inlineHelpText>
    <label>Warranty Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>