ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expired_Date__c</fullName>
    <description>This field contains the date time the warranty is switched to Expired.</description>
    <inlineHelpText>This field contains the date time the warranty is switched to Expired.</inlineHelpText>
    <label>Warranty Expired Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>