ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiry_Date__c</fullName>
    <formula>IF(
      AND(
        MONTH( Warranty_Start_Date__c ) = 2,
        DAY( Warranty_Start_Date__c ) = 29,
        NOT( 
          OR( 
            MOD( YEAR( Warranty_Start_Date__c ) + VALUE (TEXT (Warranty_Term__c)), 400 ) = 0, 
            AND( 
              MOD( YEAR( Warranty_Start_Date__c ) + VALUE (TEXT (Warranty_Term__c)), 4 ) = 0,
              MOD( YEAR( Warranty_Start_Date__c ) + VALUE (TEXT (Warranty_Term__c)), 100 ) != 0
            )
          )
        ) 
      ),
      DATE( YEAR( Warranty_Start_Date__c ) + VALUE (TEXT (Warranty_Term__c)), 3, 1),
      DATE( YEAR( Warranty_Start_Date__c ) + VALUE (TEXT (Warranty_Term__c)), MONTH( Warranty_Start_Date__c ), DAY( Warranty_Start_Date__c ) )
      )</formula>
    <label>Warranty Expiry Date</label>
    <type>Date</type>
</CustomField>