ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Owner__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who owns the Warranty</description>
    <inlineHelpText>The person who owns the Warranty</inlineHelpText>
    <label>Warranty Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Warranties</relationshipLabel>
    <relationshipName>Warranties</relationshipName>
    <type>Lookup</type>
</CustomField>