ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Owner_Address__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Owner_Address__c</fullName>
    <description>Warranty Owner Street Address. Primarily used for Conga. Do not add to layouts.</description>
    <formula>Warranty_Owner__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Owner Address</label>
    <type>Text</type>
</CustomField>