ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Owner_City__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Owner_City__c</fullName>
    <description>Used for Conga Composer. do not add to layouts.</description>
    <formula>Warranty_Owner__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Owner City</label>
    <type>Text</type>
</CustomField>