ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Owner_Company__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Owner_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Company that owns Commercial Building</description>
    <label>Warranty Owner (Company)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranties (Owner (Company))</relationshipLabel>
    <relationshipName>Warranties1</relationshipName>
    <type>Lookup</type>
</CustomField>