ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Owner_Fax__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Owner_Fax__c</fullName>
    <description>Warranty owner fax number. Primiarly used for conga. Do not add to layouts.</description>
    <formula>Warranty_Owner__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Owner Fax</label>
    <type>Text</type>
</CustomField>