ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Owner_Phone__c</fullName>
    <description>Warranty Owner Phone Number. Primarily use for Conga.</description>
    <formula>Warranty_Owner__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Owner Phone</label>
    <type>Text</type>
</CustomField>