ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Owner_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Owner_PostalCode__c</fullName>
    <description>Warranty Owner information. Primarily used for Conga documents.</description>
    <formula>Warranty_Owner__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Owner PostalCode</label>
    <type>Text</type>
</CustomField>