ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Registration_Id__c</fullName>
    <inlineHelpText>Auto-generated registration number based on Province Code (2 char), 5 digit unique numeric (per province) and full year. E.g. ON-10001-2019</inlineHelpText>
    <label>Warranty Registration Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>