ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Service_Region__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Service_Region__c</fullName>
    <description>The service region. Same formula as defined in the Case, more less, but there&apos;s no sector. This drives what addresses get put on templates, contact, etc.</description>
    <formula>IF(
        ISPICKVAL(Building__r.BillingCountryCode , &quot;US&quot;),&apos;US&apos; ,

    IF(AND(
        ISPICKVAL(Building__r.BillingCountryCode , &quot;CA&quot;),
        OR
        (
        ISPICKVAL(Building__r.BillingStateCode, &quot;AB&quot;),
        ISPICKVAL(Building__r.BillingStateCode, &quot;BC&quot;),
        ISPICKVAL(Building__r.BillingStateCode, &quot;SK&quot;),
        ISPICKVAL(Building__r.BillingStateCode, &quot;NT&quot;),
        ISPICKVAL(Building__r.BillingStateCode, &quot;YT&quot;),
        ISPICKVAL(Building__r.BillingStateCode, &quot;NU&quot;),
        ISPICKVAL(Building__r.BillingStateCode, &quot;MB&quot;)
        )
           ),
     &apos;Western Canada&apos; ,
     &apos;Eastern Canada&apos; 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The region the customer&apos;s Warranty is run out of.</inlineHelpText>
    <label>Warranty Service Region</label>
    <type>Text</type>
</CustomField>