ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Start_Date__c</fullName>
    <description>This is the start of the warranty period</description>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>