ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <description>Status of the Warranty</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Expired</fullName>
                <isActive>false</isActive>
                <label>Expired</label>
            </value>
            <value>
                <fullName>Not Issued</fullName>
                <isActive>false</isActive>
                <label>Not Issued</label>
            </value>
            <value>
                <fullName>Registered</fullName>
                <isActive>false</isActive>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Unregistered</fullName>
                <isActive>false</isActive>
                <label>Unregistered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>