ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Substatus__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Substatus__c</fullName>
    <label>Substatus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Warranty_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting documentation</fullName>
            </value>
            <value>
                <fullName>Need Insurance</fullName>
            </value>
            <value>
                <fullName>With Sales</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Invoice Sent</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>In Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Not Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>