ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Term__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Term__c</fullName>
    <description>This is the warranty term. 
Numeric values are in years
LT = Life Time
NW = No Warranty</description>
    <label>Warranty Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>