ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Term_FR__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Term_FR__c</fullName>
    <formula>Case(
TEXT(Warranty_Term__c),
&quot;5&quot;, &quot;CINQ&quot;,
&quot;10&quot;, &quot;DIX&quot;,
&quot;15&quot;, &quot;QUINZE&quot;,
&quot;20&quot;, &quot;VINGT&quot;,
&quot;25&quot;, &quot;VINGT-CINQ&quot;,
&quot;TRENTE&quot;
)</formula>
    <label>Warranty Term FR</label>
    <type>Text</type>
</CustomField>