ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Term_Text__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Term_Text__c</fullName>
    <description>Converts the warranty term to a written out number in prose. All caps for some reason. Do not use on layouts.</description>
    <formula>Case(
      TEXT(Warranty_Term__c),
      &quot;5&quot;, &quot;FIVE&quot;,
      &quot;10&quot;, &quot;TEN&quot;,
      &quot;15&quot;, &quot;FIFTEEN&quot;,
      &quot;20&quot;, &quot;TWENTY&quot;,
      &quot;25&quot;, &quot;TWENTY FIVE&quot;,
      &quot;THIRTY&quot;
     )</formula>
    <label>Warranty Term Text</label>
    <type>Text</type>
</CustomField>