ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Term_Years__c</fullName>
    <description>Warranty value as a number, derived from the picklist. This is useful in other formulas.</description>
    <formula>IF(
ISNUMBER(TEXT(Warranty_Term__c)),
VALUE(TEXT(Warranty_Term__c)),
null
)</formula>
    <inlineHelpText>Duration of the Warranty based on the original product. Measured in years.</inlineHelpText>
    <label>Warranty Term (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>