ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Warranty_Transfer_Count__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Transfer_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to track the number of times the Warranty Owner field is changed</description>
    <label>Warranty Transfer Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>