ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/WCMS_Approver__c.field-meta.xml
<CustomField>
    <fullName>WCMS_Approver__c</fullName>
    <description>Who approved the warranty in the old WCMS system. IKO May map this at a later date.</description>
    <inlineHelpText>Who approved the Warranty in the old WCMS system.</inlineHelpText>
    <label>WCMS Approver</label>
    <length>80</length>
    <type>Text</type>
</CustomField>