ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Work_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Completion_Date__c</fullName>
    <description>This records the estimated completion of the project.</description>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>