ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/fields/Work_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Start_Date__c</fullName>
    <description>This is the project start date for the contractor</description>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>