ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/recordTypes/Commercial_Warranty.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Warranty</fullName>
    <active>true</active>
    <description>Used for Commercial Warranties, which can be registered by the Contractors</description>
    <label>Commercial Warranty</label>
</RecordType>