ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/recordTypes/Residential_Warranty.recordType-meta.xml
<RecordType>
    <fullName>Residential_Warranty</fullName>
    <active>true</active>
    <description>Used to register warranties for residential installations.</description>
    <label>Residential Warranty</label>
</RecordType>