ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty__c/validationRules/Deficiencies_No_Go_from_Some_to_None.validationRule-meta.xml
<ValidationRule>
    <fullName>Deficiencies_No_Go_from_Some_to_None</fullName>
    <active>true</active>
    <description>CLAIMSV2-38 You can&apos;t go from having deficincies to having none. That makes no sense.</description>
    <errorConditionFormula>(ISPICKVAL( Installation_Deficiency_Status__c , &apos;No Deficiencies&apos; )
 || ISPICKVAL( Installation_Deficiency_Status__c , &apos;&apos; )
 )
&amp;&amp; (CONTAINS( TEXT(PRIORVALUE(Installation_Deficiency_Status__c)) , &apos;Repairs&apos; )

)</errorConditionFormula>
    <errorDisplayField>Installation_Deficiency_Status__c</errorDisplayField>
    <errorMessage>You can&apos;t choose No Deficiencies if you&apos;ve already indicated that the roof had deficiencies.</errorMessage>
</ValidationRule>